# diff-enum

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: lib.rs
