[package]
name = "diff-enum"
version = "0.1.4"
authors = ["rhysd <https://rhysd.github.io>"]
edition = "2018"
description = "A macro library to help defining enum variants by their differences"
repository = "https://github.com/rhysd/diff-enum"
readme = "README.md"
license = "MIT"
include = ["/src/**/*.rs", "/Cargo.toml", "/LICENSE.txt"]

[package.metadata.release]
no-dev-version = true

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[dev-dependencies]
cargo-husky = "1.3"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "rhysd/world-map-gen" }
